[gd_scene format=3 uid="uid://c3ryrvgjw2cgf"]

[ext_resource type="Script" uid="uid://di6torp73dwun" path="res://riku/malli.gd" id="1_1xegc"]
[ext_resource type="Script" uid="uid://chr337e01mdcf" path="res://riku/intro_text.gd" id="1_etfxu"]
[ext_resource type="PackedScene" uid="uid://b5vf8miru34in" path="res://riku/hud_tyokalu.tscn" id="2_5h2yi"]
[ext_resource type="Texture2D" uid="uid://dswqnkhiv4cuk" path="res://assets/artwork_1.png" id="2_p74l2"]
[ext_resource type="Texture2D" uid="uid://87r7hsfceuhh" path="res://assets/artwork_2.png" id="3_7hrww"]
[ext_resource type="Script" uid="uid://2fg43f6vfenx" path="res://riku/raamit.gd" id="3_sly5m"]
[ext_resource type="Texture2D" uid="uid://cosx8ax5n1a1s" path="res://assets/artwork_3.png" id="4_mkikd"]
[ext_resource type="Texture2D" uid="uid://cjst0ignus2rg" path="res://assets/paintingframe.png" id="5_5h2yi"]
[ext_resource type="Texture2D" uid="uid://vs11y4f1dwl1" path="res://assets/artwork_4.png" id="5_sy68a"]
[ext_resource type="Texture2D" uid="uid://f6d3kkrxn73w" path="res://assets/artwork_5.png" id="6_twx3a"]
[ext_resource type="Texture2D" uid="uid://oi8dpyol3kge" path="res://assets/timerOverlay.png" id="8_7hrww"]
[ext_resource type="Script" uid="uid://cbc6r3x84ejtj" path="res://addons/radial_progress/RadialProgress.gd" id="8_mkikd"]
[ext_resource type="Script" uid="uid://dvocgti4devc2" path="res://riku/kello.gd" id="8_sy68a"]
[ext_resource type="Texture2D" uid="uid://ln0t24gjqi82" path="res://assets/fame_9slice.png" id="10_p74l2"]

[sub_resource type="LabelSettings" id="LabelSettings_d4nlf"]
font_size = 32
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="HUD" type="Control" unique_id=282879990]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MALLI" type="Control" parent="." unique_id=160149065]
layout_mode = 1
anchor_bottom = 0.68600005
offset_left = -26.0
offset_top = -20.0
offset_right = 365.0
offset_bottom = 55.471954
script = ExtResource("1_1xegc")

[node name="MalliMaalaus1" type="TextureRect" parent="MALLI" unique_id=1112015115]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 42.0
offset_top = 136.0
offset_right = 221.0
offset_bottom = -110.0
texture = ExtResource("2_p74l2")
expand_mode = 1
stretch_mode = 6

[node name="MalliMaalaus2" type="TextureRect" parent="MALLI" unique_id=1143436340]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 42.0
offset_top = 136.0
offset_right = 221.0
offset_bottom = -110.0
texture = ExtResource("3_7hrww")
expand_mode = 1
stretch_mode = 6

[node name="MalliMaalaus3" type="TextureRect" parent="MALLI" unique_id=54046936]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 42.0
offset_top = 136.0
offset_right = 221.0
offset_bottom = -110.0
texture = ExtResource("4_mkikd")
expand_mode = 1
stretch_mode = 6

[node name="MalliMaalaus4" type="TextureRect" parent="MALLI" unique_id=1329574733]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 42.0
offset_top = 136.0
offset_right = 221.0
offset_bottom = -110.0
texture = ExtResource("5_sy68a")
expand_mode = 1
stretch_mode = 6

[node name="MalliMaalaus5" type="TextureRect" parent="MALLI" unique_id=1516511384]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_left = 42.0
offset_top = 136.0
offset_right = 221.0
offset_bottom = -110.0
texture = ExtResource("6_twx3a")
expand_mode = 1
stretch_mode = 6

[node name="MallinRaamit" type="TextureRect" parent="MALLI" unique_id=2136573653]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 1.0
offset_right = 399.0
texture = ExtResource("5_5h2yi")
expand_mode = 4
stretch_mode = 4

[node name="Kello" type="Control" parent="MALLI" unique_id=832627035]
layout_mode = 1
anchors_preset = 0
offset_left = 89.0
offset_top = 23.0
offset_right = 182.0
offset_bottom = 114.0
script = ExtResource("8_sy68a")

[node name="Control" type="Control" parent="MALLI/Kello" unique_id=1473630269]
layout_mode = 1
anchor_right = 0.989
anchor_bottom = 1.0
offset_left = 46.0
offset_top = 45.0
offset_right = 46.022995
offset_bottom = 45.0
script = ExtResource("8_mkikd")
max_value = 1.0
radius = 40.0
progress = 0.4
thickness = 40.0
bg_color = Color(0.25728, 0.24959998, 0.48, 1)
bar_color = Color(0, 0.89, 0.7861667, 1)

[node name="Kehys" type="TextureRect" parent="MALLI/Kello" unique_id=1974908123]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_7hrww")
expand_mode = 1
stretch_mode = 4

[node name="HUD_Tyokalu" parent="." unique_id=245919087 instance=ExtResource("2_5h2yi")]
self_modulate = Color(0.997768, 0, 0.5170993, 1)
layout_mode = 1
offset_left = 98.0
offset_top = -129.0
offset_right = 298.0
offset_bottom = -29.0

[node name="HUD_Tyokalu5" parent="." unique_id=1359503904 instance=ExtResource("2_5h2yi")]
self_modulate = Color(0.31, 0.293725, 0.2449, 1)
layout_mode = 1
offset_left = 887.0
offset_top = -119.0
offset_right = 1087.0
offset_bottom = -19.0

[node name="HUD_Tyokalu2" parent="." unique_id=1895421303 instance=ExtResource("2_5h2yi")]
self_modulate = Color(0.95, 0.660725, 0.1235, 1)
layout_mode = 1
offset_left = 292.0
offset_top = -99.0
offset_right = 492.0
offset_bottom = 1.0

[node name="HUD_Tyokalu4" parent="." unique_id=1694625808 instance=ExtResource("2_5h2yi")]
self_modulate = Color(0.34310004, 0.73, 0.5816884, 1)
layout_mode = 1
offset_left = 691.0
offset_top = -99.0
offset_right = 891.0
offset_bottom = 1.0

[node name="HUD_Tyokalu3" parent="." unique_id=1240604228 instance=ExtResource("2_5h2yi")]
self_modulate = Color(0.89, 0.11569999, 0.11569999, 1)
layout_mode = 1
offset_left = 492.0
offset_top = -85.0
offset_right = 692.0
offset_bottom = 15.0

[node name="RAAMIT" type="Control" parent="." unique_id=807778476]
visible = false
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 645.0
script = ExtResource("3_sly5m")

[node name="NinePatchRect" type="NinePatchRect" parent="RAAMIT" unique_id=1649743592]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -28.0
offset_top = -24.0
offset_right = 27.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("10_p74l2")
patch_margin_bottom = 254
axis_stretch_horizontal = 2
axis_stretch_vertical = 1

[node name="GET_READY" type="Label" parent="." unique_id=1406744723]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "GET READY!
1... 2... 3...    "
label_settings = SubResource("LabelSettings_d4nlf")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("1_etfxu")
